--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1> my new journey begins</h1>
+    <h2> trying to learning github accurately.</h2>
+    <h2>i can't figure it out</h2>
 </body>
 </html>
