--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
     <h1> my new journey begins</h1>
     <h2> trying to learning github accurately.</h2>
     <h2>i can't figure it out</h2>
-</body>
+    <p> i am so confused that irritating me.</p>
 </html>
