--- a/index.html
+++ b/index.html
@@ -11,4 +11,5 @@
     <h2> trying to learning github accurately.</h2>
     <h2>i can't figure it out</h2>
     <p> i am so confused that irritating me.</p>
+    <p> Alhamdulillah. finally it's working right. after passing all day long i did it.</p>
 </html>
